# ABEL

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  licensifier.py  pyproject.toml  setup.cfg
.github/workflows/: unix.yml
abel/: CONFIG.py  __init__.py  abelconfig.toml
abel/apis/elegant/: elegant_api.py
abel/apis/guineapig/: guineapig_api.py
abel/apis/hipace/: hipace_api.py  input_template  job_script_template
abel/apis/impactx/: impactx_api.py
abel/apis/ocelot/: ocelot_api.py
abel/apis/rf_track/: rf_track_api.py
abel/apis/wake_t/: wake_t_api.py
abel/classes/: beam.py  cost_modeled.py  event.py  runnable.py  trackable.py
abel/classes/RFlinac/: RFlinac.py
abel/classes/bds/: bds.py
abel/classes/beamline/: beamline.py
abel/classes/collider/: collider.py
abel/classes/combiner_ring/: combiner_ring.py
abel/classes/damping_ring/: damping_ring.py
abel/classes/driver_complex/: driver_complex.py
abel/classes/interstage/: __init__.py  interstage.py  interstage_basic.py  interstage_elegant.py  interstage_impactx.py
abel/classes/interstage_quads/: __init__.py  interstage_quads_impactx.py
abel/classes/ip/: ip.py
abel/classes/out_coupler/: __init__.py  basic.py
abel/classes/plasma_lens/: plasma_lens.py
abel/classes/rf_accelerator/: rf_accelerator.py
abel/classes/source/: source.py
abel/classes/spectrometer/: __init__.py  spectrometer.py
abel/classes/stage/: stage.py
abel/classes/transfer_line/: transfer_line.py
abel/classes/turnaround/: turnaround.py
abel/physics_models/: beta_multistep.py  betatron_motion.py  hills_equation.py  ion_motion_wakefield_perturbation.py  particles_transverse_wake_instability.py  plasma_wake_1d.py  slices_transverse_wake_instability.py  spin_tracking.py  transverse_wake_instability.py  twoD_particles_transverse_wake_instability.py
abel/utilities/: beam_physics.py  colors.py  larmor.py  other.py  plasma_physics.py  relativity.py  statistics.py
abel/wrappers/elegant/: elegant_wrapper.py
abel/wrappers/guineapig/: guineapig_wrapper.py
abel/wrappers/hipace/: hipace_wrapper.py  input_template  job_script_template
abel/wrappers/impactx/: impactx_wrapper.py  transformation_utilities.py
abel/wrappers/rf_track/: rf_track_wrapper.py
abel/wrappers/wake_t/: wake_t_wrapper.py
docs/: Makefile  create_abel_tomlfile.py
docs/sphinx-build/doctrees/: citing_and_acknowledging.doctree  environment.pickle  index.doctree
docs/sphinx-build/html/: .buildinfo  citing_and_acknowledging.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/sphinx-source/: citing_and_acknowledging.rst  conf.py  index.rst  installation.rst  requirements.txt
docs/sphinx-source/api_external/: collider.rst  cost_modeled.rst  runnable.rst  trackables.rst  wrapper_apis.rst  wrappers.rst
docs/sphinx-source/development/: developers.rst  join_community.rst
docs/sphinx-source/installation/: local_setup.rst
docs/sphinx-source/usage/: beams_and_trackables.rst  choosing_implementation.rst  examples.rst  get_started.rst  parameter_scans.rst  running_simulations.rst
example/: main.ipynb  nonlinear.ipynb  optimizer.ipynb
examples/: Energy_loss_example.ipynb  FACET-II.ipynb  FACETII_prtcl_instability_stage_tests.ipynb  HALHF_prtcl_instability_5m_stage1.ipynb  HALHF_prtcl_instability_stage_tests.ipynb  HALHFv3_prtcl_instability_stage.ipynb  RFaccelerator_example.ipynb  RFlinac_example.ipynb  ahhf.ipynb  bayesian_optimization.ipynb  collider_example.ipynb  experiment_example.ipynb  facet2_example.ipynb  flashforward_example.ipynb  gamma-gamma_collider.ipynb  high_energy_collider.ipynb  hipace_comparisson.ipynb  hipace_example.ipynb  impactx_test.ipynb  interstage_example.ipynb  linac_example.ipynb  mars_shot.ipynb  multistage_nonlinear_elegant.ipynb  optimization_example.ipynb  plasmalens_example.ipynb  plasmalens_thick_example.ipynb  preset_example.ipynb  pwfa_collider_example.ipynb  radiationReaction.ipynb  ramp_example.ipynb  rf_accelerator_example.ipynb  scan_example.ipynb  single_particle_hipace.ipynb  single_particle_spread_in_mean_radiated_power.ipynb  spin_tracking.ipynb  spinpolarization_example.ipynb  test_stageGeometryParameters.ipynb  waket_example.ipynb
examples/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
examples/delete/: linac_example.ipynb
opal/: CONFIG.py  __init__.py
opal/apis/elegant/: elegant_api.py
opal/apis/guineapig/: guineapig_api.py
opal/apis/hipace/: hipace_api.py  input_template  job_script_template
opal/apis/ocelot/: ocelot_api.py
opal/apis/wake_t/: wake_t_api.py
opal/classes/: bds.py  beam.py  beamline.py  collider.py  dipole.py  drift.py  event.py  experiment.py  interstage.py  ip.py  linac.py  quadrupole.py  runnable.py  scannable.py  source.py  spectrometer.py  stage.py  trackable.py
opal/classes/bds/: bds.py
opal/classes/beamline/: beamline.py
opal/classes/ip/: ip.py
opal/physics_models/: hills_equation.py  plasma_wake_1d.py
opal/physicsmodels/: betatronHills.py  plasmawake1D.py  radiationReaction.py  wakeGolovanov.py  wakeLu.py
opal/utilities/: __init__.py  beam_physics.py  beamphysics.py  plasma_physics.py  plasmaphysics.py  relativity.py  statistics.py
src/: __init__.py
src/abel/: CONFIG.py
src/classes/: Beam.py  Interstage.py  Linac.py  Source.py  Stage.py  Trackable.py  __init__.py
src/utilities/: SI.py  __init__.py  plasmaphysics.py
tests/: test_Beam.py  test_StageBasic.py  test_StageBasic_beamline.py  test_StageHipace.py  test_StagePrtclTransWakeInstability.py  test_StagePrtclTransWakeInstability_beamline.py  test_StageQuasistatic2d.py  test_StageReducedModels.py  test_StageReducedModels_beamline.py  test_StageWakeT.py  test_Stage_geometry.py  test_beam.py  test_elegant_api.py  test_elegant_wrapper.py  test_impactx.py  test_init.py  test_linac.py  test_linac_and_beamline.py  test_plasma_lens.py  test_presets.py  test_rf_track_api.py  test_rf_track_wrapper.py  test_source.py  test_sources.py  test_spin.py  test_stageBasic.py  test_stageGeometry.py  test_stage_geometry.py  test_wake_t_api.py  test_wake_t_wrapper.py
(+254 files in other folders)
