[build-system]
# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abel"
version = "1.0"

dependencies = [
   "numpy",
   "scipy",
   "numba",
   "tqdm",
   "openpmd-api",
   "openpmd-viewer",
   "joblib",
   "joblib-progress",
   "dill",
   "matplotlib",
   "PyQt6",
   "pyqtgraph",
   "Wake-T",
   "ax-platform",
   "CLICopti >= 2.2",
   "RF-Track",
   "impactx-noacc >= 25.06",
   "toml"
]
requires-python = ">=3,<3.13"

authors = [
  {name = "Carl Andreas Lindstrøm", email = "c.a.lindstrom@fys.uio.no"},
  {name = "Jian Bin Ben Chen"},
  {name = "Ole Gunnar Finnerud"},
  {name = "Kyrre Sjobak"},
  {name = "Daniel Kalvik"},
  {name = "Erik Adli"},
  {name = "Eir Eline Hørlyk"}
]
readme = "README.md"
#license = {text="LGPL3+"}

#[tool.setuptools]
#package-dir = {"" = "Python"}

#[tool.setuptools.packages.find]
#where = ["Python"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = [
  "core: Test core functionality",
  "rft_api_unit_test: Unit tests for the RF-Track API",
  "elegant_api_unit_test: Unit tests for the ELEGANT API",
  "wake_t_api_unit_test : Unit tests for the Wake-T API",
  "stageGeometry: Test stage geometry calculation functionality",
  "spin: Test spin and polarization functionality",
  "sources: Test the various Source subclasses generate beams with desired properties",
  "plasma_lens: Test various PlasmaLens subclasses",
  "beam: Tests for the Beam class",
  "StageReducedModels_linac: Test linacs based on StageReducedModels",
  "StageReducedModels: Tests on StageReducedModels",
  "linac_unit_test: Unit tests for the Linac class",
  "StageBasic: Unit tests for the StageBasic class",
  "StageBasic_linac: Integration tests for StageBasic linacs",
  "StageQuasistatic2d: Tests for the StageQuasistatic2d class",
  "StageWakeT: Tests for the StageWakeT class",
  "presets: Tests for collider presets",
]
