[metadata]
name = OPAL
version = attr: opal.__version__
description = The Optimizable Plasma-Accelerator Linac code
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/carlandreaslindstrom/OPAL
author = Carl A. Lindstrøm (University of Oslo)
author_email = c.a.lindstrom@fys.uio.no
license = GPLv3
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
python_requires = >=3.7

[options.extras_require]
test =